unpackaged/main/default/objects/Product__c/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suitable</fullName>
            </value>
            <value>
                <fullName>Accredited</fullName>
            </value>
            <value>
                <fullName>Qualified Purchaser</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Qualified Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>