unpackaged/main/default/objects/Product__c/fields/All_Cash__c.field-meta.xml
<CustomField>
    <fullName>All_Cash__c</fullName>
    <label>All-Cash</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>