unpackaged/main/default/objects/Product__c/fields/All_Cash_Blank__c.field-meta.xml
<CustomField>
    <fullName>All_Cash_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(All_Cash__c))</formula>
    <label>All Cash Blank</label>
    <type>Checkbox</type>
</CustomField>