unpackaged/main/default/objects/Product__c/fields/Analyst_Notes__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Notes__c</fullName>
    <label>Analyst Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>