unpackaged/main/default/objects/Product__c/fields/Anticipated_Hold_Period_Blank__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Hold_Period_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Anticipated_Hold_Period__c))</formula>
    <label>Anticipated Hold Period Blank</label>
    <type>Checkbox</type>
</CustomField>