unpackaged/main/default/objects/Product__c/fields/Anticipated_Hold_Period_years__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Hold_Period_years__c</fullName>
    <label>Anticipated Hold Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>5-7 years</fullName>
            </value>
            <value>
                <fullName>7-10 years</fullName>
            </value>
            <value>
                <fullName>10+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>