unpackaged/main/default/objects/Product__c/fields/Anticipated_Hold_Period_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Hold_Period_Yrs__c</fullName>
    <label>Anticipated Hold Period (Yrs)</label>
    <type>TextArea</type>
</CustomField>