unpackaged/main/default/objects/Product__c/fields/Anticipated_Offering_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Offering_Close_Date__c</fullName>
    <label>Anticipated Offering Close Date</label>
    <type>Date</type>
</CustomField>