unpackaged/main/default/objects/Product__c/fields/Anticipated_Offering_Close_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Offering_Close_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Anticipated_Offering_Close_Date__c)</formula>
    <label>Anticipated Offering Close Date Blank</label>
    <type>Checkbox</type>
</CustomField>