unpackaged/main/default/objects/Product__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Real Estate</fullName>
            </value>
            <value>
                <fullName>Private Credit</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Energy Programs</fullName>
            </value>
            <value>
                <fullName>Interval Funds</fullName>
            </value>
            <value>
                <fullName>Structured Notes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>