unpackaged/main/default/objects/Product__c/fields/Asset_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Fee__c</fullName>
    <label>Asset Management Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>