unpackaged/main/default/objects/Product__c/fields/Asset_Management_Fee_Blank__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Fee_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Asset_Management_Fee__c)</formula>
    <label>Asset Management Fee Blank</label>
    <type>Checkbox</type>
</CustomField>