unpackaged/main/default/objects/Product__c/fields/Asset_Subclass__c.field-meta.xml
<CustomField>
    <fullName>Asset_Subclass__c</fullName>
    <label>Asset Subclass</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asset_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1031DST/TIC</fullName>
            </value>
            <value>
                <fullName>Reg D Real Estate Funds</fullName>
            </value>
            <value>
                <fullName>Public Non-Traded Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>