unpackaged/main/default/objects/Product__c/fields/Audited_Fund_Financials__c.field-meta.xml
<CustomField>
    <fullName>Audited_Fund_Financials__c</fullName>
    <label>Audited Fund Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>