unpackaged/main/default/objects/Product__c/fields/Audited_Fund_Financials_Blank__c.field-meta.xml
<CustomField>
    <fullName>Audited_Fund_Financials_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Audited_Fund_Financials__c))</formula>
    <label>Audited Fund Financials Blank</label>
    <type>Checkbox</type>
</CustomField>