unpackaged/main/default/objects/Product__c/fields/BD_or_RIA__c.field-meta.xml
<CustomField>
    <fullName>BD_or_RIA__c</fullName>
    <label>BD or RIA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>RIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>