unpackaged/main/default/objects/Product__c/fields/BD_Reallowance__c.field-meta.xml
<CustomField>
    <fullName>BD_Reallowance__c</fullName>
    <label>BD Reallowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>