unpackaged/main/default/objects/Product__c/fields/BD_Reallowance_Blank__c.field-meta.xml
<CustomField>
    <fullName>BD_Reallowance_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(BD_Reallowance__c)</formula>
    <label>BD Reallowance Blank</label>
    <type>Checkbox</type>
</CustomField>