unpackaged/main/default/objects/Product__c/fields/Blind_Pool_Blank__c.field-meta.xml
<CustomField>
    <fullName>Blind_Pool_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Blind_Pool__c))</formula>
    <label>Blind Pool Blank</label>
    <type>Checkbox</type>
</CustomField>