unpackaged/main/default/objects/Product__c/fields/CLOs__c.field-meta.xml
<CustomField>
    <fullName>CLOs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLOs</label>
    <type>Checkbox</type>
</CustomField>