unpackaged/main/default/objects/Product__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Point of Contact at the Sponsor.</description>
    <formula>Sponsor__r.Point_of_Contact_Name__c</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>