unpackaged/main/default/objects/Product__c/fields/Current_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Current_Distribution__c</fullName>
    <label>Current Distribution</label>
    <type>TextArea</type>
</CustomField>