unpackaged/main/default/objects/Product__c/fields/Current_NAV__c.field-meta.xml
<CustomField>
    <fullName>Current_NAV__c</fullName>
    <label>Current NAV</label>
    <type>TextArea</type>
</CustomField>