unpackaged/main/default/objects/Product__c/fields/Current_NAV_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_NAV_Unit_Price__c</fullName>
    <label>Current NAV/Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>