unpackaged/main/default/objects/Product__c/fields/Current_NAV_Unit_Price_Blank__c.field-meta.xml
<CustomField>
    <fullName>Current_NAV_Unit_Price_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Current_NAV_Unit_Price__c)</formula>
    <label>Current NAV/Unit Price Blank</label>
    <type>Checkbox</type>
</CustomField>