unpackaged/main/default/objects/Product__c/fields/Date_Approved_Blank__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Date_Approved__c)</formula>
    <label>Date Approved Blank</label>
    <type>Checkbox</type>
</CustomField>