unpackaged/main/default/objects/Product__c/fields/Date_of_Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Review__c</fullName>
    <label>Date of Last Review</label>
    <type>Date</type>
</CustomField>