unpackaged/main/default/objects/Product__c/fields/Development_Fee__c.field-meta.xml
<CustomField>
    <fullName>Development_Fee__c</fullName>
    <label>Development Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>