unpackaged/main/default/objects/Product__c/fields/Development_Fee_Blank__c.field-meta.xml
<CustomField>
    <fullName>Development_Fee_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Development_Fee__c)</formula>
    <label>Development Fee Blank</label>
    <type>Checkbox</type>
</CustomField>