unpackaged/main/default/objects/Product__c/fields/Direct_Loans_2nd_Lien__c.field-meta.xml
<CustomField>
    <fullName>Direct_Loans_2nd_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Loans - 2nd Lien</label>
    <type>Checkbox</type>
</CustomField>