unpackaged/main/default/objects/Product__c/fields/Disposition_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Fee__c</fullName>
    <label>Disposition Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>