unpackaged/main/default/objects/Product__c/fields/Disposition_Fee_Blank__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Fee_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Disposition_Fee__c)</formula>
    <label>Disposition Fee Blank</label>
    <type>Checkbox</type>
</CustomField>