unpackaged/main/default/objects/Product__c/fields/Effective_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Effective_Date__c)</formula>
    <label>Effective Date Blank</label>
    <type>Checkbox</type>
</CustomField>