unpackaged/main/default/objects/Product__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Point of Contact&#39;s Email Address at the Sponsor.</description>
    <formula>Sponsor__r.Point_of_Contact_Email_Address__c</formula>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>