unpackaged/main/default/objects/Product__c/fields/Equity_Contribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Equity_Contribution_Method__c</fullName>
    <label>Equity Contribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Capital Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>