unpackaged/main/default/objects/Product__c/fields/Equity_Contribution_Method_Blank__c.field-meta.xml
<CustomField>
    <fullName>Equity_Contribution_Method_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Equity_Contribution_Method__c))</formula>
    <label>Equity Contribution Method Blank</label>
    <type>Checkbox</type>
</CustomField>