unpackaged/main/default/objects/Product__c/fields/Equity_Raised__c.field-meta.xml
<CustomField>
    <fullName>Equity_Raised__c</fullName>
    <label>Equity Raised</label>
    <type>TextArea</type>
</CustomField>