unpackaged/main/default/objects/Product__c/fields/Equity_Raised_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Equity_Raised_to_Date__c</fullName>
    <label>Equity Raised to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>