unpackaged/main/default/objects/Product__c/fields/Equity_Raised_to_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>Equity_Raised_to_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Equity_Raised_to_Date__c)</formula>
    <label>Equity Raised to Date Blank</label>
    <type>Checkbox</type>
</CustomField>