unpackaged/main/default/objects/Product__c/fields/Est_Avg_Cash_on_Cash_Returns__c.field-meta.xml
<CustomField>
    <fullName>Est_Avg_Cash_on_Cash_Returns__c</fullName>
    <label>Est. Avg. Cash-on-Cash Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>