unpackaged/main/default/objects/Product__c/fields/Est_Avg_Cash_on_Cash_Returns_Blank__c.field-meta.xml
<CustomField>
    <fullName>Est_Avg_Cash_on_Cash_Returns_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Est_Avg_Cash_on_Cash_Returns__c)</formula>
    <label>Est Avg Cash-on-Cash Returns Blank</label>
    <type>Checkbox</type>
</CustomField>