unpackaged/main/default/objects/Product__c/fields/Est_Cash_on_Cash_Return_Blank__c.field-meta.xml
<CustomField>
    <fullName>Est_Cash_on_Cash_Return_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Est_Year_1_Cash_on_Cash_Return__c)</formula>
    <label>Est Cash-on-Cash Return Blank</label>
    <type>Checkbox</type>
</CustomField>