unpackaged/main/default/objects/Product__c/fields/Est_Exit_Year__c.field-meta.xml
<CustomField>
    <fullName>Est_Exit_Year__c</fullName>
    <label>Est. Exit Year</label>
    <type>Date</type>
</CustomField>