unpackaged/main/default/objects/Product__c/fields/Est_Year_1_Cash_on_Cash_Return__c.field-meta.xml
<CustomField>
    <fullName>Est_Year_1_Cash_on_Cash_Return__c</fullName>
    <label>Est. Year 1 Cash-on-Cash Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>