unpackaged/main/default/objects/Product__c/fields/Frequency_of_Investor_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Investor_Reporting__c</fullName>
    <label>Frequency of Investor Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>