unpackaged/main/default/objects/Product__c/fields/Frequency_of_Investor_Reporting_Blank__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Investor_Reporting_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Frequency_of_Investor_Reporting__c))</formula>
    <label>Frequency of Investor Reporting Blank</label>
    <type>Checkbox</type>
</CustomField>