unpackaged/main/default/objects/Product__c/fields/Fund_Life_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Fund_Life_Cycle__c</fullName>
    <label>Fund Life-Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finite</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>