unpackaged/main/default/objects/Product__c/fields/Fund_Life_Cycle_Blank__c.field-meta.xml
<CustomField>
    <fullName>Fund_Life_Cycle_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Fund_Life_Cycle__c))</formula>
    <label>Fund Life-Cycle Blank</label>
    <type>Checkbox</type>
</CustomField>