unpackaged/main/default/objects/Product__c/fields/Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Hospitality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospitality</label>
    <type>Checkbox</type>
</CustomField>