unpackaged/main/default/objects/Product__c/fields/IC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>IC_Approval_Date__c</fullName>
    <label>IC Approval Date</label>
    <type>Date</type>
</CustomField>