unpackaged/main/default/objects/Product__c/fields/IC_Approval_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>IC_Approval_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(IC_Approval_Date__c)</formula>
    <label>IC Approval Date Blank</label>
    <type>Checkbox</type>
</CustomField>