unpackaged/main/default/objects/Product__c/fields/Industrial__c.field-meta.xml
<CustomField>
    <fullName>Industrial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial</label>
    <type>Checkbox</type>
</CustomField>