unpackaged/main/default/objects/Product__c/fields/International_Exposure_Blank__c.field-meta.xml
<CustomField>
    <fullName>International_Exposure_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(International_Exposure__c))</formula>
    <label>International Exposure Blank</label>
    <type>Checkbox</type>
</CustomField>