unpackaged/main/default/objects/Product__c/fields/Investment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Investment_Summary__c</fullName>
    <label>Investment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>