unpackaged/main/default/objects/Product__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Sub-Advisory</fullName>
                <isActive>false</isActive>
                <label>Sub-Advisory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>