unpackaged/main/default/objects/Product__c/fields/Land__c.field-meta.xml
<CustomField>
    <fullName>Land__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Land</label>
    <type>Checkbox</type>
</CustomField>