unpackaged/main/default/objects/Product__c/fields/Life_Cycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle_Status__c</fullName>
    <label>Life-Cycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital Raising</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Liquidating</fullName>
            </value>
            <value>
                <fullName>Full-Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>