unpackaged/main/default/objects/Product__c/fields/Loan_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity__c</fullName>
    <label>Loan Maturity</label>
    <type>TextArea</type>
</CustomField>