unpackaged/main/default/objects/Product__c/fields/Loan_to_Offering_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Offering_Ratio__c</fullName>
    <label>Loan-to-Offering Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>