unpackaged/main/default/objects/Product__c/fields/Loan_to_Offering_Ratio_Blank__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Offering_Ratio_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Loan_to_Offering_Ratio__c)</formula>
    <label>Loan to Offering Ratio Blank</label>
    <type>Checkbox</type>
</CustomField>