unpackaged/main/default/objects/Product__c/fields/Manager_Promote__c.field-meta.xml
<CustomField>
    <fullName>Manager_Promote__c</fullName>
    <label>Manager Promote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>