unpackaged/main/default/objects/Product__c/fields/Manager_Promote_Fee_Blank__c.field-meta.xml
<CustomField>
    <fullName>Manager_Promote_Fee_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Manager_Promote__c)</formula>
    <label>Manager Promote Fee Blank</label>
    <type>Checkbox</type>
</CustomField>