unpackaged/main/default/objects/Product__c/fields/Manufactured_Housing__c.field-meta.xml
<CustomField>
    <fullName>Manufactured_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufactured Housing</label>
    <type>Checkbox</type>
</CustomField>