unpackaged/main/default/objects/Product__c/fields/Mark_Up_to_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_to_Purchase__c</fullName>
    <label>Mark-Up to Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>