unpackaged/main/default/objects/Product__c/fields/Mark_Up_to_Purchase_Blank__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_to_Purchase_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Mark_Up_to_Purchase__c)</formula>
    <label>Mark-Up to Purchase Blank</label>
    <type>Checkbox</type>
</CustomField>