unpackaged/main/default/objects/Product__c/fields/Maximum_Offering__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Offering__c</fullName>
    <label>Maximum Offering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>