unpackaged/main/default/objects/Product__c/fields/Maximum_Offering_Blank__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Offering_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Maximum_Offering__c)</formula>
    <label>Maximum Offering Blank</label>
    <type>Checkbox</type>
</CustomField>