unpackaged/main/default/objects/Product__c/fields/Mezzanine_Loans__c.field-meta.xml
<CustomField>
    <fullName>Mezzanine_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mezzanine Loans</label>
    <type>Checkbox</type>
</CustomField>