unpackaged/main/default/objects/Product__c/fields/Minimum_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_Amount__c</fullName>
    <label>Minimum Investment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>