unpackaged/main/default/objects/Product__c/fields/Minimum_Investment_Amount_Blank__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_Amount_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Minimum_Investment_Amount__c)</formula>
    <label>Minimum Investment Amount Blank</label>
    <type>Checkbox</type>
</CustomField>