unpackaged/main/default/objects/Product__c/fields/Multi_Tenant_Office__c.field-meta.xml
<CustomField>
    <fullName>Multi_Tenant_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Tenant Office</label>
    <type>Checkbox</type>
</CustomField>