unpackaged/main/default/objects/Product__c/fields/Multi_Tenant_Retail__c.field-meta.xml
<CustomField>
    <fullName>Multi_Tenant_Retail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Tenant Retail</label>
    <type>Checkbox</type>
</CustomField>