unpackaged/main/default/objects/Product__c/fields/NOI_Variance_Budget__c.field-meta.xml
<CustomField>
    <fullName>NOI_Variance_Budget__c</fullName>
    <label>NOI Variance (Budget)</label>
    <type>TextArea</type>
</CustomField>