unpackaged/main/default/objects/Product__c/fields/NOI_Variance_PPM__c.field-meta.xml
<CustomField>
    <fullName>NOI_Variance_PPM__c</fullName>
    <label>NOI Variance (PPM)</label>
    <type>TextArea</type>
</CustomField>