unpackaged/main/default/objects/Product__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Growth &amp; Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>