unpackaged/main/default/objects/Product__c/fields/Objective_Blank__c.field-meta.xml
<CustomField>
    <fullName>Objective_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Objective__c))</formula>
    <label>Objective Blank</label>
    <type>Checkbox</type>
</CustomField>