unpackaged/main/default/objects/Product__c/fields/of_Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>of_Current_Assets__c</fullName>
    <label># of Current Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>