unpackaged/main/default/objects/Product__c/fields/of_Current_Assets_Blank__c.field-meta.xml
<CustomField>
    <fullName>of_Current_Assets_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(of_Current_Assets__c)</formula>
    <label># of Current Assets Blank</label>
    <type>Checkbox</type>
</CustomField>