unpackaged/main/default/objects/Product__c/fields/Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status__c</fullName>
    <label>Performance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Performing</fullName>
                <color>#FF0000</color>
                <label>Under Performing</label>
            </value>
            <value>
                <fullName>Performing</fullName>
                <color>#33CC00</color>
                <label>Performing</label>
            </value>
            <value>
                <fullName>Watch List</fullName>
                <color>#FFFF66</color>
                <label>Watch List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>