unpackaged/main/default/objects/Product__c/fields/Performance_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status_Color__c</fullName>
    <formula>CASE(Text(Performance_Status__c),
&quot;Under Performing&quot;, IMAGE(&quot;/resource/RedCircle&quot;, &quot;Under Performing&quot;, 20, 20),
&quot;Watch List&quot;, IMAGE(&quot;/resource/YellowCircle&quot;, &quot;Watch List&quot;, 20, 20),
&quot;Performing&quot;, IMAGE(&quot;/resource/GreenCircle&quot;, &quot;Performing&quot;, 20, 20), null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Status Color</label>
    <type>Text</type>
</CustomField>